--- a/src/css/base.css
+++ b/src/css/base.css
@@ -26,6 +26,10 @@ body {
 
 main {
   flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 main:has(.back-link) {
   text-align: center;
